# qmk_hid

./: Cargo.toml
resources/: 99-hidapi.qmk_hid.rules
src/: main.rs
