[package]
name = "qmk_hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.3.0"
dbus = "0.9.5"

[dependencies.windows]
version = "0.28"
features = [
    "Media",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
]
